objects/Apttus_DocuApi__DocusignUserConsent__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_DocuApi__DocusignAccountID__c</fullName>
        <label>Docusign Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__DocusignUserEmail__c</fullName>
        <label>Docusing User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Docusign_User_Consents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Docusign User Consent</label>
    <nameField>
        <displayFormat>DC-{0000}</displayFormat>
        <label>Docusign User Consent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Docusign User Consents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>